@@ -534,7 +534,21 @@ class ApiQueryRecentChanges extends ApiQueryBase {
 			'namespace' => 'Filter log entries to only this namespace(s)',
 			'user' => 'Only list changes by this user',
 			'excludeuser' => 'Don\'t list changes by this user',
-			'prop' => 'Include additional pieces of information',
+			'prop' => array(
+				'Include additional pieces of information',
+				' user           - Adds the user responsible for the edit and tags if they are an IP',
+				' comment        - Adds the comment for the edit',
+				' parsedcomment  - Adds the parsed comment for the edit',
+				' flags          - Adds flags for the edit',
+				' timestamp      - Adds timestamp of the edit',
+				' title          - Adds the page title of the edit',
+				' ids            - Adds the page id, recent changes id and the new and old revision id',
+				' sizes          - Adds the new and old page length in bytes',
+				' redirect       - Tags edit if page is a redirect',
+				' patrolled      - Tags edits have have been patrolled',
+				' loginfo        - Adds log information (logid, logtype, etc) to log entries',
+				' tags           - Lists tags for the entry',
+			),
 			'token' => 'Which tokens to obtain for each change',
 			'show' => array(
 				'Show only items that meet this criteria.',
